# time_execution_comparator

./: LICENCE  README.md  pyproject.toml
time_execution_comparator/: __init__.py  execution_comparator.py
