[project]
name = "easy-console-table"
version = "0.1.0"
authors = [{name="flastar"}, ]
description = "Pre-builded class to compare time execution."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = {file="LICENSE"}

dependencies = [
    "tqdm",
    "easy-console-table",
]

[project.urls]
"Homepage" = "https://github.com/flastar-fr/time_execution_comparator"
[build-system]
requires = ["setuptools <= 69.1.1"]
build-backend = "setuptools.build_meta"